// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fixtures with default settings 1`] = `
"# h1

p1

[linkA](http://a.com \\"title a\\") 

## h2

p1.1

[linkADup](http://a.com \\"title a\\")

[linkB](http://b.com)

### h3

p1.1.1

[linkC](https://c.com)

[2]: https://c.com

### h3dup

[linkD](https://d.com)

## h2

p1.2

![image1](https://foo.com/image)
"
`;

exports[`fixtures with default settings 2`] = `
"big bang

[link0](http://example.com \\"Example Domain\\") 

## h1

p1

[linkA](http://a.com \\"title a\\") 

# h

p2

[linkADup](http://a.com \\"title a\\")

[linkB](http://b.com)

# h3

p3

[linkC](https://c.com)

[2]: https://c.com

## h2

p3.1

[linkD](https://d.com)

![image1](https://foo.com/image)

###### h6
"
`;
